moved the builders to their own js file

--- a/src/html/partials/vehicle-dashboard.html
+++ b/src/html/partials/vehicle-dashboard.html
@@ -1,4 +1,4 @@
-<h1 id="VehicleDashboardHeader">Vehicle Dashboard</h1>
+<h1 id="VehicleDashboardSearch">Vehicle Dashboard</h1>
 <section id="LicensingTiles" class="row" style="min-height:100px;"></section>
 <section
   class="row py-4"
@@ -21,19 +21,19 @@
 </section>
 <section id="FuelTiles" class="row" style="min-height:100px;"></section>
 <section class="row py-4">
-  ${require("./vehicle-dashboard/fuel-summary.html")}
+  ${require("./vehicle-dashboard/fuel-history.html")}
 </section>
 <section class="row py-4">
-  ${require("./vehicle-dashboard/maintenance-summary.html")}
+  ${require("./vehicle-dashboard/maintenance-history.html")}
 </section>
 <section class="row py-4">
-  ${require("./vehicle-dashboard/toll-summary.html")}
+  ${require("./vehicle-dashboard/toll-history.html")}
 </section>
 <section class="row py-4">
-  ${require("./vehicle-dashboard/billing-summary.html")}
-  ${require("./vehicle-dashboard/licensing-summary.html")}
+  ${require("./vehicle-dashboard/billing-history.html")}
+  ${require("./vehicle-dashboard/licensing-history.html")}
 </section>
 <section class="row py-4">
-  ${require("./vehicle-dashboard/violations-summary.html")}
-  ${require("./vehicle-dashboard/inspections-summary.html")}
+  ${require("./vehicle-dashboard/violations-history.html")}
+  ${require("./vehicle-dashboard/inspections-history.html")}
 </section>
