--- a/src/html/partials/vehicle-dashboard/billing-history.html
+++ b/src/html/partials/vehicle-dashboard/billing-history.html
@@ -1,7 +1,7 @@
-<div class="col-xl-12" data-aos="fade-up" data-aos-delay="100">
+<div class="col-xl-6 pb-3 pb-xl-0" data-aos="fade-down" data-aos-delay="100">
   <div class="panel">
     <div class="panel-header">
-      <span>Toll History</span>
+      <span>Billing History</span>
       <div class="panel-menu">
         <a
           class="dropdown-toggle"
@@ -23,7 +23,7 @@
             role="menuitem"
             class="dropdown-item"
           >
-            All Toll History
+            All Billing History
           </button>
           <button
             type="button"
@@ -37,13 +37,13 @@
       </div>
     </div>
     <div class="panel-body">
-      <table class="table" id="TollSummary" style="width:100%;">
+      <table class="table" id="BillingHistory" style="width:100%;">
         <thead>
           <tr>
-            <th>Date/Time</th>
+            <th>Bill Date</th>
             <th>Description</th>
-            <th>Location</th>
             <th>Amount</th>
+            <th>Details</th>
           </tr>
         </thead>
         <tbody></tbody>
