--- a/src/html/partials/vehicle-dashboard/inspections-history.html
+++ b/src/html/partials/vehicle-dashboard/inspections-history.html
@@ -6,7 +6,7 @@
     </div>
     <div class="panel-body">
       <div class="table-responsive">
-        <table class="table" id="InspectionSummary" style="width:100%;">
+        <table class="table" id="InspectionHistory" style="width:100%;">
           <thead>
             <tr>
               <th>Date</th>
