--- a/src/html/partials/vehicle-dashboard/licensing-history.html
+++ b/src/html/partials/vehicle-dashboard/licensing-history.html
@@ -1,7 +1,7 @@
-<div class="col-xl-12" data-aos="fade-up" data-aos-delay="100">
+<div class="col-xl-6 pt-3 pt-xl-0" data-aos="fade-down" data-aos-delay="200">
   <div class="panel">
     <div class="panel-header">
-      <span>Recent Maintenance</span>
+      <span>Licensing History</span>
       <div class="panel-menu">
         <a
           class="dropdown-toggle"
@@ -23,7 +23,7 @@
             role="menuitem"
             class="dropdown-item"
           >
-            All Maintenance History
+            All Licensing History
           </button>
           <button
             type="button"
@@ -37,16 +37,13 @@
       </div>
     </div>
     <div class="panel-body">
-      <table class="table" id="MaintenanceSummary" style="width:100%;">
+      <table class="table" id="LicensingHistory" style="width:100%;">
         <thead>
           <tr>
-            <th>Date</th>
-            <th>Odometer</th>
-            <th>Vendor</th>
-            <th>In Network</th>
-            <th>Service</th>
-            <th>Quantity</th>
-            <th>Amount</th>
+            <th>Exp Date</th>
+            <th>Status</th>
+            <th>Details</th>
+            <th>Needs</th>
           </tr>
         </thead>
         <tbody></tbody>
