--- a/src/html/partials/vehicle-dashboard/toll-history.html
+++ b/src/html/partials/vehicle-dashboard/toll-history.html
@@ -1,7 +1,7 @@
-<div class="col-xl-6 pt-3 pt-xl-0" data-aos="fade-down" data-aos-delay="200">
+<div class="col-xl-12" data-aos="fade-up" data-aos-delay="100">
   <div class="panel">
     <div class="panel-header">
-      <span>Licensing History</span>
+      <span>Toll History</span>
       <div class="panel-menu">
         <a
           class="dropdown-toggle"
@@ -23,7 +23,7 @@
             role="menuitem"
             class="dropdown-item"
           >
-            All Licensing History
+            All Toll History
           </button>
           <button
             type="button"
@@ -37,14 +37,13 @@
       </div>
     </div>
     <div class="panel-body">
-      <table class="table" id="LicensingSummary" style="width:100%;">
+      <table class="table" id="TollHistory" style="width:100%;">
         <thead>
           <tr>
-            <th>Exp Date</th>
-            <th>Plate</th>
-            <th>Title</th>
-            <th>Status</th>
-            <th>Needs</th>
+            <th>Date/Time</th>
+            <th>Description</th>
+            <th>Location</th>
+            <th>Amount</th>
           </tr>
         </thead>
         <tbody></tbody>
