--- a/src/html/partials/vehicle-dashboard/violations-history.html
+++ b/src/html/partials/vehicle-dashboard/violations-history.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="panel-body">
-      <table class="table" id="ViolationSummary" style="width:100%;">
+      <table class="table" id="ViolationHistory" style="width:100%;">
         <thead>
           <tr>
             <th>Date</th>
