--- a/src/scss/components/_panel.scss
+++ b/src/scss/components/_panel.scss
@@ -35,65 +35,67 @@
 
   .panel-body {
     @extend .card-body, .p-0;
+  }
+}
 
-    table {
-      @extend .table, .table-sm, .table-striped, .table-hover;
-      @include font-size(0.875rem);
-      border-top: hidden;
+.panel .panel-body table,
+.swal-datatable {
+  @extend .table, .table-sm, .table-striped, .table-hover;
+  @include font-size(0.875rem, true);
+  border-top: hidden;
 
-      td.details-control {
-        cursor: pointer;
-      }
+  td.details-control {
+    cursor: pointer;
+  }
 
-      td,
-      th {
-        vertical-align: inherit;
-      }
+  td,
+  th {
+    vertical-align: inherit !important;
+    padding: 0.75rem !important;
+  }
 
-      &.dataTable thead > tr > th.sorting_asc,
-      &.dataTable thead > tr > th.sorting_desc {
-        padding-right: 30px !important;
-      }
+  &.dataTable thead > tr > th.sorting_asc,
+  &.dataTable thead > tr > th.sorting_desc {
+    padding-right: 30px !important;
+  }
 
-      &.dataTable thead > tr > th {
-        padding: 0.75rem 1.5rem 0.75rem 0.25rem;
-      }
+  &.dataTable thead > tr > th {
+    padding: 0.75rem 1.5rem 0.75rem 0.25rem;
+  }
 
-      td:first-child,
-      th:first-child {
-        padding-left: 1.5rem !important;
-      }
-      td:last-child,
-      th:last-child {
-        padding-right: 1.5rem !important;
-      }
+  td:first-child,
+  th:first-child {
+    padding-left: 1.5rem !important;
+  }
+  td:last-child,
+  th:last-child {
+    padding-right: 1.5rem !important;
+  }
 
-      thead {
-        font-family: $font-stack;
-        border-bottom: 2px solid #ddd;
-        color: rgba(0, 0, 0, 0.5);
-        @include font-size(0.825rem);
-      }
-      tbody {
-        font-family: $data-font-stack;
-      }
-    }
+  thead {
+    font-family: $font-stack;
+    border-bottom: 2px solid #ddd;
+    color: rgba(0, 0, 0, 0.5);
+    @include font-size(0.825rem, true);
+  }
+  tbody {
+    font-family: $data-font-stack;
   }
 }
 
 .dataTables_info {
   @extend .text-muted;
   padding-top: 0 !important;
-  @include font-size(0.875rem);
+  @include font-size(0.875rem, true);
 }
 
 .dataTables_length,
 .dataTables_info {
-  @include font-size(0.875rem);
+  @include font-size(0.875rem, true);
   text-align: left !important;
 }
 .dataTables_filter,
 .dataTables_paginate {
   text-align: right !important;
-  @include font-size(0.875rem);
+  @include font-size(0.875rem, true);
 }
