--- a/src/scss/pages/_vehicle-dashboard.scss
+++ b/src/scss/pages/_vehicle-dashboard.scss
@@ -1,2 +1,10 @@
 @import "vehicle-dashboard/dashboard-sections";
 @import "vehicle-dashboard/description-list";
+
+#VehicleDashboardSearch {
+  @extend .jumbotron, .display-4, .h1;
+  background-image: url(../assets/images/whitebg.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
