--- a/src/html/partials/vehicle-dashboard/maintenance-history.html
+++ b/src/html/partials/vehicle-dashboard/maintenance-history.html
@@ -1,12 +1,7 @@
-<div
-  class="col-xl-12"
-  data-aos="fade-up"
-  data-aos-easing="ease-in-cubic"
-  data-aos-delay="250"
->
+<div class="col-xl-12" data-aos="fade-up" data-aos-delay="100">
   <div class="panel">
     <div class="panel-header">
-      <span>Fuel Purchases</span>
+      <span>Recent Maintenance</span>
       <div class="panel-menu">
         <a
           class="dropdown-toggle"
@@ -28,7 +23,7 @@
             role="menuitem"
             class="dropdown-item"
           >
-            All Fuel History
+            All Maintenance History
           </button>
           <button
             type="button"
@@ -38,29 +33,19 @@
           >
             Download CSV
           </button>
-          <div class="dropdown-divider"></div>
-          <button
-            type="button"
-            tabindex="0"
-            role="menuitem"
-            class="dropdown-item"
-          >
-            Manage Fuel Cards
-          </button>
         </div>
       </div>
     </div>
     <div class="panel-body">
-      <table class="table" id="FuelSummary" style="width:100%;">
+      <table class="table" id="MaintenanceHistory" style="width:100%;">
         <thead>
           <tr>
             <th>Date</th>
             <th>Odometer</th>
-            <th>Driver</th>
-            <th>Merchant Address</th>
-            <th>Type</th>
+            <th>Vendor</th>
+            <th>In Network</th>
+            <th>Service</th>
             <th>Quantity</th>
-            <th>Unit Cost</th>
             <th>Amount</th>
           </tr>
         </thead>
