Added jquery-i18next and configured french options (google translate). DataTables strings still need to be handled

--- a/src/html/partials/altbar.html
+++ b/src/html/partials/altbar.html
@@ -1,21 +1,21 @@
 <div id="AltBar">
   <nav class="nav nav-underline">
-    <a class="nav-link active" href="#!">General</a>
-    <a class="nav-link" href="#!">Expense Summary</a>
-    <a class="nav-link" href="#!">Billing History</a>
-    <a class="nav-link" href="#!">Maintenance</a>
-    <a class="nav-link" href="#!">Fuel</a>
-    <a class="nav-link" href="#!">Licensing</a>
-    <a class="nav-link" href="#!">Accident</a>
-    <a class="nav-link" href="#!">Rental History</a>
-    <a class="nav-link" href="#!">Inspections</a>
-    <a class="nav-link" href="#!">Drivers</a>
-    <a class="nav-link" href="#!">Documents</a>
-    <a class="nav-link" href="#!">Reported Odometers</a>
-    <a class="nav-link" href="#!">Toll Transactions</a>
-    <a class="nav-link" href="#!">Transport/Storage</a>
-    <a class="nav-link" href="#!">Violations</a>
-    <a class="nav-link" href="#!">eVoucher</a>
-    <a class="nav-link" href="#!">SafeRoads</a>
+    <a class="nav-link active" href="#!" data-i18n="alt_bar.general"></a>
+    <a class="nav-link" href="#!" data-i18n="alt_bar.expenses"></a>
+    <a class="nav-link" href="#!" data-i18n="alt_bar.billing"></a>
+    <a class="nav-link" href="#!" data-i18n="alt_bar.maintenance"></a>
+    <a class="nav-link" href="#!" data-i18n="alt_bar.fuel"></a>
+    <a class="nav-link" href="#!" data-i18n="alt_bar.licensing"></a>
+    <a class="nav-link" href="#!" data-i18n="alt_bar.accident"></a>
+    <a class="nav-link" href="#!" data-i18n="alt_bar.rentals"></a>
+    <a class="nav-link" href="#!" data-i18n="alt_bar.inspections"></a>
+    <a class="nav-link" href="#!" data-i18n="alt_bar.drivers"></a>
+    <a class="nav-link" href="#!" data-i18n="alt_bar.documents"></a>
+    <a class="nav-link" href="#!" data-i18n="alt_bar.odometers"></a>
+    <a class="nav-link" href="#!" data-i18n="alt_bar.tolls"></a>
+    <a class="nav-link" href="#!" data-i18n="alt_bar.transports"></a>
+    <a class="nav-link" href="#!" data-i18n="alt_bar.violations"></a>
+    <a class="nav-link" href="#!" data-i18n="alt_bar.evoucher"></a>
+    <a class="nav-link" href="#!" data-i18n="alt_bar.saferoads"></a>
   </nav>
 </div>
