--- a/src/html/partials/topbar.html
+++ b/src/html/partials/topbar.html
@@ -11,4 +11,33 @@
       <span class="hamburger-label">MENU</span>
     </button>
   </nav>
+  <!-- Language Toggle -->
+  <nav class="navbar-nav ml-auto">
+    <div class="nav-item dropdown">
+      <a
+        class="nav-item nav-link dropdown-toggle"
+        id="languageToggle"
+        href="#"
+        data-toggle="dropdown"
+        aria-haspopup="true"
+        aria-expanded="false"
+      >
+        <i class="fas fa-globe-americas fa-fw"></i>
+      </a>
+      <div class="dropdown-menu" aria-labelledby="languageToggle">
+        <a
+          class="dropdown-item change-language active"
+          href="#!"
+          data-lang="en"
+        >
+          <i class="fas fa-globe-americas fa-fw"></i>
+          &nbsp;English
+        </a>
+        <a class="dropdown-item change-language" href="#!" data-lang="fr">
+          <i class="fab fa-canadian-maple-leaf fa-fw"></i>
+          &nbsp;Fran&ccedil;ais
+        </a>
+      </div>
+    </div>
+  </nav>
 </header>
