--- a/src/html/partials/vehicle-dashboard/billing-history.html
+++ b/src/html/partials/vehicle-dashboard/billing-history.html
@@ -1,7 +1,7 @@
 <div class="col-xl-6 pb-3 pb-xl-0" data-aos="fade-down" data-aos-delay="100">
   <div class="panel">
     <div class="panel-header">
-      <span>Billing History</span>
+      <span data-i18n="billing_history.title">Billing History</span>
       <div class="panel-menu">
         <a
           class="dropdown-toggle"
@@ -40,10 +40,10 @@
       <table class="table" id="BillingHistory" style="width:100%;">
         <thead>
           <tr>
-            <th>Bill Date</th>
-            <th>Description</th>
-            <th>Amount</th>
-            <th>Details</th>
+            <th data-i18n="billing_history.bill_date">Bill Date</th>
+            <th data-i18n="billing_history.description">Description</th>
+            <th data-i18n="billing_history.amount">Amount</th>
+            <th data-i18n="billing_history.details"></th>
           </tr>
         </thead>
         <tbody></tbody>
