--- a/src/html/partials/vehicle-dashboard/fuel-history.html
+++ b/src/html/partials/vehicle-dashboard/fuel-history.html
@@ -6,7 +6,7 @@
 >
   <div class="panel">
     <div class="panel-header">
-      <span>Fuel Purchases</span>
+      <span data-i18n="fuel_history.title">Fuel Purchases</span>
       <div class="panel-menu">
         <a
           class="dropdown-toggle"
@@ -54,14 +54,14 @@
       <table class="table" id="FuelHistory" style="width:100%;">
         <thead>
           <tr>
-            <th>Date</th>
-            <th>Odometer</th>
-            <th>Driver</th>
-            <th>Merchant Address</th>
-            <th>Type</th>
-            <th>Quantity</th>
-            <th>Unit Cost</th>
-            <th>Amount</th>
+            <th data-i18n="fuel_history.date">Date</th>
+            <th data-i18n="fuel_history.odometer">Odometer</th>
+            <th data-i18n="fuel_history.driver">Driver</th>
+            <th data-i18n="fuel_history.merchant_address">Merchant Address</th>
+            <th data-i18n="fuel_history.type">Type</th>
+            <th data-i18n="fuel_history.quantity">Quantity</th>
+            <th data-i18n="fuel_history.unit_cost">Unit Cost</th>
+            <th data-i18n="fuel_history.amount">Amount</th>
           </tr>
         </thead>
         <tbody></tbody>
