--- a/src/html/partials/vehicle-dashboard/inspections-history.html
+++ b/src/html/partials/vehicle-dashboard/inspections-history.html
@@ -1,7 +1,7 @@
 <div class="col-xl-6 pt-3 pt-xl-0" data-aos="fade-up" data-aos-delay="200">
   <div class="panel">
     <div class="panel-header">
-      <span>Inspection History</span>
+      <span data-i18n="inspection_history.title">Inspection History</span>
       <div class="panel-menu"></div>
     </div>
     <div class="panel-body">
@@ -9,9 +9,9 @@
         <table class="table" id="InspectionHistory" style="width:100%;">
           <thead>
             <tr>
-              <th>Date</th>
-              <th>Comments</th>
-              <th>Report</th>
+              <th data-i18n="inspection_history.date">Date</th>
+              <th data-i18n="inspection_history.comments">Comments</th>
+              <th data-i18n="inspection_history.report"></th>
             </tr>
           </thead>
           <tbody></tbody>
