--- a/src/html/partials/vehicle-dashboard/licensing-history.html
+++ b/src/html/partials/vehicle-dashboard/licensing-history.html
@@ -1,7 +1,7 @@
 <div class="col-xl-6 pt-3 pt-xl-0" data-aos="fade-down" data-aos-delay="200">
   <div class="panel">
     <div class="panel-header">
-      <span>Licensing History</span>
+      <span data-i18n="licensing_history.title">Licensing History</span>
       <div class="panel-menu">
         <a
           class="dropdown-toggle"
@@ -40,10 +40,10 @@
       <table class="table" id="LicensingHistory" style="width:100%;">
         <thead>
           <tr>
-            <th>Exp Date</th>
-            <th>Status</th>
-            <th>Details</th>
-            <th>Needs</th>
+            <th data-i18n="licensing_history.exp_date">Exp Date</th>
+            <th data-i18n="licensing_history.status">Status</th>
+            <th data-i18n="licensing_history.details">Details</th>
+            <th data-i18n="licensing_history.needs">Needs</th>
           </tr>
         </thead>
         <tbody></tbody>
