--- a/src/html/partials/vehicle-dashboard/maintenance-history.html
+++ b/src/html/partials/vehicle-dashboard/maintenance-history.html
@@ -1,7 +1,7 @@
 <div class="col-xl-12" data-aos="fade-up" data-aos-delay="100">
   <div class="panel">
     <div class="panel-header">
-      <span>Recent Maintenance</span>
+      <span data-i18n="maintenance_history.title">Recent Maintenance</span>
       <div class="panel-menu">
         <a
           class="dropdown-toggle"
@@ -40,13 +40,14 @@
       <table class="table" id="MaintenanceHistory" style="width:100%;">
         <thead>
           <tr>
-            <th>Date</th>
-            <th>Odometer</th>
-            <th>Vendor</th>
-            <th>In Network</th>
-            <th>Service</th>
-            <th>Quantity</th>
-            <th>Amount</th>
+            <th data-i18n="maintenance_history.date">Date</th>
+            <th data-i18n="maintenance_history.odometer">Odometer</th>
+            <th data-i18n="maintenance_history.vendor">Vendor</th>
+            <th data-i18n="maintenance_history.in_network">In Network</th>
+            <th data-i18n="maintenance_history.service">Service</th>
+            <th data-i18n="maintenance_history.quantity">Quantity</th>
+            <th data-i18n="maintenance_history.amount">Amount</th>
+            <th></th>
           </tr>
         </thead>
         <tbody></tbody>
