--- a/src/html/partials/vehicle-dashboard/toll-history.html
+++ b/src/html/partials/vehicle-dashboard/toll-history.html
@@ -1,7 +1,7 @@
 <div class="col-xl-12" data-aos="fade-up" data-aos-delay="100">
   <div class="panel">
     <div class="panel-header">
-      <span>Toll History</span>
+      <span data-i18n="toll_history.title">Toll History</span>
       <div class="panel-menu">
         <a
           class="dropdown-toggle"
@@ -40,10 +40,10 @@
       <table class="table" id="TollHistory" style="width:100%;">
         <thead>
           <tr>
-            <th>Date/Time</th>
-            <th>Description</th>
-            <th>Location</th>
-            <th>Amount</th>
+            <th data-i18n="toll_history.date_time">Date/Time</th>
+            <th data-i18n="toll_history.description">Description</th>
+            <th data-i18n="toll_history.location">Location</th>
+            <th data-i18n="toll_history.amount">Amount</th>
           </tr>
         </thead>
         <tbody></tbody>
