--- a/src/html/partials/vehicle-dashboard.html
+++ b/src/html/partials/vehicle-dashboard.html
@@ -1,5 +1,10 @@
-<h1 id="VehicleDashboardSearch">Vehicle Dashboard</h1>
-<section id="LicensingTiles" class="row" style="min-height:100px;"></section>
+<header id="VehicleDashboardHeader">
+  <h1 data-i18n="vehicle_dashboard.title" class="display-4">
+    Vehicle Dashboard
+  </h1>
+  <div id="VehicleDashboardSearch"></div>
+</header>
+<!-- <section id="LicensingTiles" class="row" style="min-height:100px;"></section> -->
 <section
   class="row py-4"
   data-aos="zoom-in-down"
