--- a/src/html/partials/vehicle-dashboard/driver-summary.html
+++ b/src/html/partials/vehicle-dashboard/driver-summary.html
@@ -1,7 +1,7 @@
 <div class="col-xl-12 py-4">
   <div class="panel">
     <div class="panel-header">
-      <span>Driver Detail</span>
+      <span data-i18n="driver_summary.title">Driver Detail</span>
       <div class="panel-menu">
         <a
           class="dropdown-toggle"
@@ -60,38 +60,42 @@
         </figcaption>
       </figure>
       <dl class="dashboard-list col-md-6 col-lg-4">
-        <dt>Last Name</dt>
-        <dd data-field="driver_last_name"></dd>
-        <dt>First Name</dt>
-        <dd data-field="driver_first_name"></dd>
-        <dt>Address Line 1</dt>
-        <dd data-field="driver_address_1"></dd>
-        <dt>Address Line 2</dt>
-        <dd data-field="driver_address_2"></dd>
-        <dt>City/State/ZIP</dt>
-        <dd data-field="driver_city_region_postal"></dd>
-        <dt>County</dt>
-        <dd data-field="driver_county"></dd>
-        <dt>Phone</dt>
-        <dd data-field="driver_phone"></dd>
-        <dt>Cell</dt>
-        <dd data-field="driver_cell"></dd>
-        <dt>Fax</dt>
-        <dd data-field="driver_fax"></dd>
+        <dt data-i18n="driver_summary.last_name">Last Name</dt>
+        <dd data-field="driver_summary.last_name"></dd>
+        <dt data-i18n="driver_summary.first_name">First Name</dt>
+        <dd data-field="driver_summary.first_name"></dd>
+        <dt data-i18n="driver_summary.address_1">Address 1</dt>
+        <dd data-field="driver_summary.address_1"></dd>
+        <dt data-i18n="driver_summary.address_2">Address 2</dt>
+        <dd data-field="driver_summary.address_2"></dd>
+        <dt data-i18n="driver_summary.city_region_postal">City State ZIP</dt>
+        <dd>
+          <span data-field="driver_summary.city"></span>
+          <span data-field="driver_summary.region"></span>
+          <span data-field="driver_summary.postal"></span>
+        </dd>
+        <dt data-i18n="driver_summary.county">County</dt>
+        <dd data-field="driver_summary.county"></dd>
+        <dt data-i18n="driver_summary.phone">Phone</dt>
+        <dd data-field="driver_summary.phone"></dd>
+        <dt data-i18n="driver_summary.cell">Cell</dt>
+        <dd data-field="driver_summary.cell"></dd>
+        <dt data-i18n="driver_summary.fax">Fax</dt>
+        <dd data-field="driver_summary.fax"></dd>
       </dl>
       <dl class="dashboard-list col-md-6 col-lg-4">
-        <dt>Email</dt>
-        <dd data-field="driver_email"></dd>
-        <dt>Employee ID</dt>
-        <dd data-field="driver_id"></dd>
-        <dt>Driver Misc 1</dt>
-        <dd data-field="driver_misc_1"></dd>
-        <dt>Driver Misc 2</dt>
-        <dd data-field="driver_misc_2"></dd>
-        <dt>Driver Misc 3</dt>
-        <dd data-field="driver_misc_3"></dd>
-        <dt>Driver Misc 4</dt>
-        <dd data-field="driver_misc_4"></dd>
+        <dt data-i18n="driver_summary.email">Email</dt>
+        <dd data-field="driver_summary.email"></dd>
+        <dt data-i18n="driver_summary.driver_id">Driver ID</dt>
+        <dd data-field="driver_summary.driver_id"></dd>
+        <dt data-i18n="driver_summary.misc_1">Driver Misc 1</dt>
+        <dd data-field="driver_summary.misc_1"></dd>
+        <dt data-i18n="driver_summary.misc_2">Driver Misc 2</dt>
+        <dd data-field="driver_summary.misc_2"></dd>
+        <dt data-i18n="driver_summary.misc_3">Driver Misc 3</dt>
+        <dd data-field="driver_summary.misc_3"></dd>
+        <dt data-i18n="driver_summary.misc_4">Driver Misc 4</dt>
+        <dd data-field="driver_summary.misc_4"></dd>
       </dl>
     </div>
   </div>
