--- a/src/html/partials/vehicle-dashboard/violations-history.html
+++ b/src/html/partials/vehicle-dashboard/violations-history.html
@@ -1,7 +1,7 @@
 <div class="col-xl-6 pb-3 pb-xl-0" data-aos="fade-up" data-aos-delay="100">
   <div class="panel">
     <div class="panel-header">
-      <span>Violation History</span>
+      <span data-i18n="violation_history.title">Violation History</span>
       <div class="panel-menu">
         <a
           class="dropdown-toggle"
@@ -17,11 +17,11 @@
       <table class="table" id="ViolationHistory" style="width:100%;">
         <thead>
           <tr>
-            <th>Date</th>
-            <th>Paid</th>
-            <th>Type</th>
-            <th>Amount</th>
-            <th>Image</th>
+            <th data-i18n="violation_history.date">Date</th>
+            <th data-i18n="violation_history.paid_date">Paid</th>
+            <th data-i18n="violation_history.type">Type</th>
+            <th data-i18n="violation_history.amount">Amount</th>
+            <th data-i18n="violation_history.details">Details</th>
           </tr>
         </thead>
         <tbody></tbody>
